# question_extractor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
extractor/: client.py
models/: __init__.py
